# plugin-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  IPlugin.h  build.sh  plugin-template.cpp  plugin-template.h  plugin.json
.github/workflows/: build.yml
utils/: db.h  utils.h
